# featcopilot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PR_SUMMARY_feat_strengthen_core_api.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pre-commit.yml  publish.yml  tests.yml
autofeat/: __init__.py
autofeat/core/: __init__.py  base.py  registry.py
autofeat/engines/: __init__.py  relational.py  tabular.py  text.py  timeseries.py
autofeat/llm/: __init__.py  code_generator.py  copilot_client.py  explainer.py  semantic_engine.py
autofeat/selection/: __init__.py  importance.py  redundancy.py  statistical.py  unified.py
autofeat/transformers/: __init__.py  sklearn_compat.py
autofeat/utils/: __init__.py  cache.py
benchmarks/: BENCHMARK_REPORT.md  README.md  __init__.py  datasets.md  datasets.py  feature_cache.py  run_benchmark.py  splits.py
benchmarks/automl/: AUTOML_AUTOGLUON_BENCHMARK.md  AUTOML_AUTOGLUON_BENCHMARK_LLM.md  AUTOML_AUTOGLUON_CACHE.json  AUTOML_AUTOGLUON_CACHE_LLM.json  AUTOML_BENCHMARK.md  AUTOML_BENCHMARK_REPORT.md  AUTOML_FLAML_BENCHMARK.md  AUTOML_FLAML_BENCHMARK_LLM.md  AUTOML_FLAML_CACHE.json  AUTOML_FLAML_CACHE_LLM.json  AUTOML_H2O_BENCHMARK_LLM.md  AUTOML_H2O_CACHE_LLM.json  FLAML_90S_BENCHMARK_REPORT.md  FLAML_INRIA_FULL_BENCHMARK_REPORT.md  FLAML_REALWORLD_BENCHMARK_REPORT.md  FLAML_SPOTIFY_CLASSIFICATION_REPORT.md  __init__.py  run_automl_benchmark.py  run_flaml_inria_benchmark.py  run_flaml_realworld_benchmark.py  run_flaml_spotify_benchmark.py
benchmarks/compare_tools/: COMPARISON_BENCHMARK_REPORT.md  FE_TOOLS_COMPARISON.md  FE_TOOLS_COMPARISON_CACHE.json  __init__.py  run_comparison_benchmark.py  run_fe_tools_comparison.py
benchmarks/feature_engineering/: BASIC_MODELS_BENCHMARK_TABULAR.md  (+9 more)
docs/: gen_ref_pages.py  index.md  requirements.txt
examples/: basic_usage.py  featcopilot_demo.ipynb  feature_store_feast.py  llm_powered.py  run_flaml_spotify_benchmark.py  time_aware_tabular_prototype.py
featcopilot/: __init__.py  __main__.py  cli.py
tests/: __init__.py  conftest.py  test_autofeat.py  test_benchmark_encoding.py  test_benchmark_splits.py  test_cli.py  test_core.py  test_engines.py  test_litellm.py  test_llm_modules.py  test_selection.py  test_sklearn_compat.py  test_stores.py  test_transform_rules.py  test_utils.py
(+75 files in other folders)
