[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featcopilot"
version = "0.1.0"
description = "Next-generation LLM-powered auto feature engineering framework with GitHub Copilot SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FeatCopilot Contributors"}
]
keywords = [
    "machine-learning",
    "feature-engineering",
    "automl",
    "llm",
    "copilot",
    "data-science"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pydantic>=2.0.0",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
llm = [
    "github-copilot-sdk>=0.1.0",
]
timeseries = [
    "statsmodels>=0.13.0",
]
full = [
    "github-copilot-sdk>=0.1.0",
    "statsmodels>=0.13.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/thinkall/featcopilot"
Documentation = "https://github.com/thinkall/featcopilot#readme"
Repository = "https://github.com/thinkall/featcopilot"

[tool.setuptools.packages.find]
where = ["."]
include = ["featcopilot*"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # Allow unused variables in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
